Fixed an issue with the header being stuck behind the main content

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -4,7 +4,6 @@ body {
 
 #Header {
     position: static;
-    z-index: 1;
 }
 #Search {
     position: relative;
